--- a/ClientServer/ClientServer/ClientServer.vbproj
+++ b/ClientServer/ClientServer/ClientServer.vbproj
@@ -76,6 +76,7 @@
     <Compile Include="client.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ClientClass.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
