--- a/ClientServer/ClientServer/ClientServer.vbproj
+++ b/ClientServer/ClientServer/ClientServer.vbproj
@@ -70,13 +70,13 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="client.designer.vb">
-      <DependentUpon>client.vb</DependentUpon>
+    <Compile Include="ClientTerminal.designer.vb">
+      <DependentUpon>ClientTerminal.vb</DependentUpon>
     </Compile>
-    <Compile Include="client.vb">
+    <Compile Include="ClientTerminal.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ClientClass.vb" />
+    <Compile Include="Client.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -102,8 +102,8 @@
     <Compile Include="Server.vb" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="client.resx">
-      <DependentUpon>client.vb</DependentUpon>
+    <EmbeddedResource Include="ClientTerminal.resx">
+      <DependentUpon>ClientTerminal.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
